[package]
name = "rtmp-sys"
version = "0.1.0"
authors = ["Stargateur <antoine.plaskowski@epitech.eu>"]
description = "Bindings to the rtmp library."
license = "MIT"
build = "build.rs"

[dependencies]
libc = "0.2.0"
openssl = "0.8.3"

[build-dependencies]
gcc = "0.3.0"
make-cmd = "0.1.0"
