[package]
name = "rtmp-sys"
version = "0.1.0"
authors = ["Stargateur <antoine.plaskowski@epitech.eu>"]
description = "Bindings to the rtmp library."
license = "MIT"
build = "build.rs"

[dependencies]
libc = "0.2.0"
libz-sys = "1.0"
openssl-sys = "0.7.17"

[build-dependencies]
gcc = "0.3.0"
make-cmd = "0.1.0"
